# jellyfin-manifest-tool

./: Cargo.toml  manifest.json
src/: main.rs  manifest.rs  validate.rs
